--- a/lua515_luatinker_test/lua515_luatinker_test.vcxproj
+++ b/lua515_luatinker_test/lua515_luatinker_test.vcxproj
@@ -89,6 +89,11 @@
     <ClInclude Include="..\lua_thinker\luaconf.h" />
     <ClInclude Include="..\lua_thinker\lualib.h" />
     <ClInclude Include="..\lua_thinker\lua_tinker.h" />
+    <ClInclude Include="..\lua_thinker\sample1.h" />
+    <ClInclude Include="..\lua_thinker\sample2.h" />
+    <ClInclude Include="..\lua_thinker\sample3.h" />
+    <ClInclude Include="..\lua_thinker\sample4.h" />
+    <ClInclude Include="..\lua_thinker\sample5.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
