--- a/lua515_luatinker_test/lua515_luatinker_test.vcxproj.filters
+++ b/lua515_luatinker_test/lua515_luatinker_test.vcxproj.filters
@@ -82,19 +82,19 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="sample1.lua">
+    <None Include="..\examples\sample1.lua">
       <Filter>源文件</Filter>
     </None>
-    <None Include="sample2.lua">
+    <None Include="..\examples\sample2.lua">
       <Filter>源文件</Filter>
     </None>
-    <None Include="sample3.lua">
+    <None Include="..\examples\sample3.lua">
       <Filter>源文件</Filter>
     </None>
-    <None Include="sample4.lua">
+    <None Include="..\examples\sample4.lua">
       <Filter>源文件</Filter>
     </None>
-    <None Include="sample5.lua">
+    <None Include="..\examples\sample5.lua">
       <Filter>源文件</Filter>
     </None>
   </ItemGroup>
